--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "moment": "^2.23.0",
+    "vue-browser-geolocation": "^1.5.0",
     "vue-i18n": "^7.3.3",
     "vuelidate": "^0.7.4"
   },
