--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.7.1",
     "quasar-cli": "^0.17.0",
-    "strip-ansi": "=3.0.1"
+    "strip-ansi": "=3.0.1",
+    "vue-cli-plugin-quasar": "^0.17.1"
   },
   "engines": {
     "node": ">= 8.9.0",
