--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/app": "^2.1.6",
+    "@quasar/extras": "^1.9.10",
     "axios": "^0.18.1",
     "moment": "^2.23.0",
+    "quasar": "^1.14.3",
     "vue-browser-geolocation": "^1.5.0",
     "vue-i18n": "^7.3.3",
     "vuelidate": "^0.7.4"
@@ -28,7 +31,6 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.7.1",
-    "quasar-cli": "^0.17.26",
     "strip-ansi": "=3.0.1",
     "vue-cli-plugin-quasar": "^0.17.1"
   },
