--- a/src-cordova/plugins/cordova-plugin-whitelist/package.json
+++ b/src-cordova/plugins/cordova-plugin-whitelist/package.json
@@ -16,12 +16,13 @@
     "fetchSpec": "^1.3.4"
   },
   "_requiredBy": [
-    "#DEV:/"
+    "#DEV:/",
+    "#USER"
   ],
   "_resolved": "https://registry.npmjs.org/cordova-plugin-whitelist/-/cordova-plugin-whitelist-1.3.4.tgz",
   "_shasum": "31938545c7c3e7de35c20ab08c2c3afa06e8a3f9",
   "_spec": "cordova-plugin-whitelist@^1.3.4",
-  "_where": "/home/kaze/inwork/nyx_mob/src-cordova",
+  "_where": "/Users/valentin/Documents/GitHub/nyx_mob_mvp/src-cordova",
   "author": {
     "name": "Apache Software Foundation"
   },
