--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "quasar": "^1.14.3",
     "vue-browser-geolocation": "^1.5.0",
     "vue-i18n": "^7.3.3",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@quasar/quasar-app-extension-dotenv": "^1.0.5",
